add some animation

--- a/index.html
+++ b/index.html
@@ -120,23 +120,23 @@
 				<li><img class="logo" src="assets/images/logo.svg" alt="logo"></li>
 				<li>
 					<ul class="horizentally">
-						<li><img id="fb" src="assets/icons/icon-facebook.svg" alt="facebook icon"></li>
-						<li><img id="yt" src="assets/icons/icon-youtube.svg" alt="youtube icon"></li>
-						<li><img id="tw" src="assets/icons/icon-twitter.svg" alt="twitter icon"></li>
-						<li><img id="pt" src="assets/icons/icon-pinterest.svg" alt="pinterest icon"></li>
-						<li><img id="ig" src="assets/icons/icon-instagram.svg" alt="instagram icon"></li>
+						<li><img id="fb" src="assets/icons/icon-facebook.svg" alt="facebook"></li>
+						<li><img id="yt" src="assets/icons/icon-youtube.svg" alt="youtube"></li>
+						<li><img id="tw" src="assets/icons/icon-twitter.svg" alt="twitter"></li>
+						<li><img id="pt" src="assets/icons/icon-pinterest.svg" alt="pinterest"></li>
+						<li><img id="ig" src="assets/icons/icon-instagram.svg" alt="instagram"></li>
 					</ul>
 				</li>
 			</ul>
 			<ul class="about">
-				<li>About Us</li>
-				<li>Contact</li>
-				<li>Blog</li>
+				<a href=""><li>About Us</li></a>
+				<a href=""><li>Contact</li></a>
+				<a href=""><li>Blog</li></a>
 			</ul>
 			<ul class="careers">
-				<li>Careers</li>
-				<li>Support</li>
-				<li>Privacy Policy</li>
+				<a href=""><li>Careers</li></a>
+				<a href=""><li>Support</li></a>
+				<a href=""><li>Privacy Policy</li></a>
 			</ul>
 			<ul class="last-child">
 				<li><button>Request Invite</button></li>
