--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
 				</li>
 			</ul>
 			<ul class="about">
-				<a href=""><li>About Us</li></a>
-				<a href=""><li>Contact</li></a>
-				<a href=""><li>Blog</li></a>
+				<li><a href="">About Us</a></li>
+				<li><a href="">Contact</a></li>
+				<li><a href="">Blog</a></li>
 			</ul>
 			<ul class="careers">
-				<a href=""><li>Careers</li></a>
-				<a href=""><li>Support</li></a>
-				<a href=""><li>Privacy Policy</li></a>
+				<li><a href="">Careers</a></li>
+				<li><a href="">Support</a></li>
+				<li><a href="">Privacy Policy</a></li>
 			</ul>
 			<ul class="last-child">
 				<li><button>Request Invite</button></li>
