--- a/index.html
+++ b/index.html
@@ -70,49 +70,53 @@
 				</ul>
 			</div>
 		</section>
+
+		<!-- start article section -->
+		<section class="article-container">
+			<h2>Latest Artiles</h2>
+			<div class="article-container__article">
+				<div class="article-container__article__article1">
+					<div class="img">
+						<img src="./assets/images/image-currency.jpg" alt="article image">
+					</div>
+					<p class="auth">By Claire Robinson</p>
+					<h3 class="article-container__article__article-header">Receive money in any currency with no fees
+					</h3>
+					<p class="desc">The world is getting smaller and we're becoming more mobile. So why should you be
+						forced
+						to only receive money in a single ...</p>
+				</div>
+				<div class="article-container__article__article2">
+					<div class="img">
+						<img src="./assets/images/image-restaurant.jpg" alt="article image">
+					</div>
+					<p>By Wilson Hutton</p>
+					<h3 class="article-header">Treat yourself without worrying about money</h3>
+					<p>Our simple budgeting feature allows you to separate out your spending and set realistic limits
+						each
+						month. That means you ...</p>
+				</div>
+				<div class="article-container__article__article3">
+					<div class="img">
+						<img src="./assets/images/image-plane.jpg" alt="article image">
+					</div>
+					<p>By Wilson Hutton</p>
+					<h3 class="article-header">Take your Easybank card wherever you go</h3>
+					<p>We want you to enjoy your travels. This is why we don't charge any fees on purchases while you're
+						abroad. We'll even show you ...</p>
+				</div>
+				<div class="article-container__article__article4">
+					<div class="img">
+						<img src="./assets/images/image-confetti.jpg" alt="article image">
+					</div>
+					<p>By Claire Robinson</p>
+					<h3 class="article-header">Our invite-only Beta accounts are now live!</h3>
+					<p>After a lot of hard work by the whole team, we're excited to launch our closed beta. It's easy to
+						request an invite through the site ...</p>
+				</div>
+			</div>
+		</section>
 	</main>
-	<!-- start article section -->
-	<div class="article-container ">
-		<h2>Latest Artiles</h2>
-		<div class="article-container__article">
-			<div class="article-container__article__article1">
-				<div class="img">
-					<img src="./assets/images/image-currency.jpg" alt="article image">
-				</div>
-				<p class="auth">By Claire Robinson</p>
-				<h3 class="article-container__article__article-header">Receive money in any currency with no fees</h3>
-				<p class="desc">The world is getting smaller and we're becoming more mobile. So why should you be forced
-					to only receive money in a single ...</p>
-			</div>
-			<div class="article-container__article__article2">
-				<div class="img">
-					<img src="./assets/images/image-restaurant.jpg" alt="article image">
-				</div>
-				<p>By Wilson Hutton</p>
-				<h3 class="article-header">Treat yourself without worrying about money</h3>
-				<p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each
-					month. That means you ...</p>
-			</div>
-			<div class="article-container__article__article3">
-				<div class="img">
-					<img src="./assets/images/image-plane.jpg" alt="article image">
-				</div>
-				<p>By Wilson Hutton</p>
-				<h3 class="article-header">Take your Easybank card wherever you go</h3>
-				<p>We want you to enjoy your travels. This is why we don't charge any fees on purchases while you're
-					abroad. We'll even show you ...</p>
-			</div>
-			<div class="article-container__article__article4">
-				<div class="img">
-					<img src="./assets/images/image-confetti.jpg" alt="article image">
-				</div>
-				<p>By Claire Robinson</p>
-				<h3 class="article-header">Our invite-only Beta accounts are now live!</h3>
-				<p>After a lot of hard work by the whole team, we're excited to launch our closed beta. It's easy to
-					request an invite through the site ...</p>
-			</div>
-		</div>
-	</div>
 	<!-- start footer section -->
 	<div class="footer-container">
 		<footer class="footer">
@@ -120,11 +124,11 @@
 				<li><img class="logo" src="assets/images/logo.svg" alt="logo"></li>
 				<li>
 					<ul class="horizentally">
-						<li><a href=""><img id="fb" src="assets/icons/icon-facebook.svg" alt="facebook"></a> </li>
-						<li><a href=""><img id="yt" src="assets/icons/icon-youtube.svg" alt="youtube"></a> </li>
-						<li><a href=""><img id="tw" src="assets/icons/icon-twitter.svg" alt="twitter"></a> </li>
-						<li><a href=""><img id="pt" src="assets/icons/icon-pinterest.svg" alt="pinterest"></a> </li>
-						<li><a href=""><img id="ig" src="assets/icons/icon-instagram.svg" alt="instagram"></a> </li>
+						<li><a title="facebook" class="fb" href=""></a></li>
+						<li><a title="youtube" class="yt" href=""></a></li>
+						<li><a title="twitter" class="tw" href=""></a></li>
+						<li><a title="pinterest" class="pt" href=""></a></li>
+						<li><a title="instagram" class="ig" href=""></a></li>
 					</ul>
 				</li>
 			</ul>
