--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 				<li><img class="logo" src="assets/images/logo.svg" alt="logo"></li>
 				<li>
 					<ul class="horizentally">
-						<li><a href=""><img id="fb" src="assets/icons/icon-facebook.svg" alt="facebook"></a> </li>
-						<li><a href=""><img id="yt" src="assets/icons/icon-youtube.svg" alt="youtube"></a> </li>
-						<li><a href=""><img id="tw" src="assets/icons/icon-twitter.svg" alt="twitter"></a> </li>
-						<li><a href=""><img id="pt" src="assets/icons/icon-pinterest.svg" alt="pinterest"></a> </li>
-						<li><a href=""><img id="ig" src="assets/icons/icon-instagram.svg" alt="instagram"></a> </li>
+						<li><a class="fb" href=""></a> </li>
+						<li><a class="yt" href=""></a> </li>
+						<li><a class="tw" href=""></a> </li>
+						<li><a class="pt" href=""></a> </li>
+						<li><a class="ig" href=""></a> </li>
 					</ul>
 				</li>
 			</ul>
