add html content and style to scss

--- a/index.html
+++ b/index.html
@@ -14,7 +14,50 @@
 </head>
 
 <body>
+	<!--header-->
+	<header class="header container">
+		<nav class="navbar">
+			<a href="" class="navbar__logo">
+				<img src="./assets/images/logo.svg" alt="Easybank">
+			</a>
 
+			<a href="#" class="navbar__menu navbar__show">
+				<img class="navbar__menu-open navbar__menu-hidden" src="./assets/icons/icon-hamburger.svg"
+					alt="hamburger">
+				<img class="navbar__menu-close navbar__menu-hidden" src="./assets/icons/icon-close.svg" alt="close">
+			</a>
+			</div>
+			<ul class="navbar__list">
+				<li class="navbar__list-item"><a href="#" class="navbar__list-item--link">Home</a></li>
+				<li class="navbar__list-item"><a href="#" class="navbar__list-item--link">About</a></li>
+				<li class="navbar__list-item"><a href="#" class="navbar__list-item--link">Contact</a></li>
+				<li class="navbar__list-item"><a href="#" class="navbar__list-item--link">Blog</a></li>
+				<li class="navbar__list-item"><a href="#" class="navbar__list-item--link">Careers</a></li>
+			</ul>
+
+			<a href="#" class="navbar__btn-link">Request Invite</a>
+		</nav>
+	</header>
+	<!--hero section-->
+	<section class="hero-section container">
+		<div class="hero">
+			<div class="hero__img-container">
+				<!-- <img src="./assets/images/image-mockups.png" alt="" class="hero__mockups"> -->
+			</div>
+			<div class="hero__content ">
+				<h1 class="hero__title"> Next generation digital banking
+				</h1>
+				<p class="hero__text">Take your financial life online. Your Easybank account will be a
+					one-stop-shop
+					for spending, saving, budgeting, investing, and much more.
+
+				</p>
+				<a href="#" class="hero__btn-link">Request Invite</a>
+			</div>
+		</div>
+		<!--overlay-section-->
+		<!-- <div class="overlay"></div> -->
+	</section>
 	<script src="./index.js"></script>
 </body>
 
