--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 				<li class="navbar__list-item"><a href="#" class="navbar__list-item--link">Careers</a></li>
 			</ul>
 
-			<a href="#" class="navbar__btn-link">Request Invite</a>
+			<a href="#" class="btn-link">Request Invite</a>
 		</nav>
 	</header>
 	<!--hero section-->
-	<section class="hero-section container">
-		<div class="hero">
+	<section class="hero-section">
+		<div class="hero container">
 			<div class="hero__img-container">
-				<!-- <img src="./assets/images/image-mockups.png" alt="" class="hero__mockups"> -->
+				<img src="./assets/images/image-mockups.png" alt="" class="hero__mockups">
 			</div>
 			<div class="hero__content ">
 				<h1 class="hero__title"> Next generation digital banking
@@ -52,7 +52,7 @@
 					for spending, saving, budgeting, investing, and much more.
 
 				</p>
-				<a href="#" class="hero__btn-link">Request Invite</a>
+				<a href="#" class="btn-link">Request Invite</a>
 			</div>
 		</div>
 		<!--overlay-section-->
