Add hero build 2

--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
 
 <body>
 	<main>
+		<section class="hero">
+			<div class="hero__col hero__col--image">
+				<div class="hero__img-container container">
+					<img class="hero__img" src="./assets/images/image-mockups.png" alt="" aria-hidden="true">
+				</div>
+			</div>
+			<div class="hero__col hero__col--text">
+				<div class="container">
+					<h1 class="hero__title">
+						Next generation digital banking
+					</h1>
+					<p class="hero__desc">
+						Take your financial life online.
+						Your Easybank account will be a one-stop-stop for spending, saving, budgeting, investing, and
+						much
+						more.
+					</p>
+					<a class="btn" href="#">
+						Request invite
+					</a>
+				</div>
+			</div>
+		</section>
 		<!--WHY SECTION-->
 		<section class="why">
 			<div class="container">
