update hero section

--- a/index.html
+++ b/index.html
@@ -39,23 +39,28 @@
 	</header>
 	<!--hero section-->
 	<section class="hero">
-		<div class="hero__container">
-			<div class="hero__image">
-			</div>
-			<div class="hero__body container">
-				<div class="hero__content">
-					<h1 class="hero__title"> Next generation digital banking
-					</h1>
-					<p class="hero__text">Take your financial life online. Your Easybank account will be a
-						one-stop-shop
-						for spending, saving, budgeting, investing, and much more.
-
-					</p>
-					<a href="#" class="btn-link">Request Invite</a>
-				</div>
+		<div class="hero__col hero__col--image">
+			<div class="hero__img-container container">
+				<img class="hero__img" src="./assets/images/image-mockups.png" alt="" aria-hidden="true">
 			</div>
 		</div>
-	</section>
+		<div class="hero__col hero__col--text">
+			<div class="container">
+				<h1 class="hero__title">
+					Next generation digital banking
+				</h1>
+				<p class="hero__desc">
+					Take your financial life online.
+					Your Easybank account will be a one-stop-stop for spending, saving, budgeting, investing, and
+					much
+					more.
+				</p>
+				<a class="btn-link" href="#">
+					Request invite
+				</a>
+			</div>
+		</div>
+
 	</section>
 	<script src="./index.js"></script>
 </body>
