fix accessbility issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<header class="header">
 		<div class="container">
 			<nav class="navbar">
-				<a href="" class="navbar__logo">
+				<a href="#" class="navbar__logo" aria-label="home page">
 					<svg xmlns="http://www.w3.org/2000/svg" width="139" height="20">
 						<defs>
 							<linearGradient id="a" x1="72.195%" x2="17.503%" y1="0%" y2="100%">
@@ -53,32 +53,33 @@
 			</nav>
 		</div>
 	</header>
-	<!--hero section-->
-	<section class="hero">
-		<div class="hero__col hero__col--image">
-			<div class="hero__img-container container">
-				<img class="hero__img" src="./assets/images/image-mockups.png" alt="" aria-hidden="true">
-			</div>
-		</div>
-		<div class="hero__col hero__col--text">
-			<div class="container">
-				<h1 class="hero__title">
-					Next generation digital banking
-				</h1>
-				<p class="hero__desc">
-					Take your financial life online.
-					Your Easybank account will be a one-stop-stop for spending, saving, budgeting, investing, and
-					much
-					more.
-				</p>
-				<a class="btn-link" href="#">
-					Request invite
-				</a>
-			</div>
-		</div>
-
-	</section>
 	<main>
+		<!--hero section-->
+		<section class="hero">
+			<div class="hero__col hero__col--image">
+				<div class="hero__img-container container">
+					<img class="hero__img" src="./assets/images/image-mockups.png" alt="" aria-hidden="true">
+				</div>
+			</div>
+			<div class="hero__col hero__col--text">
+				<div class="container">
+					<h1 class="hero__title">
+						Next generation digital banking
+					</h1>
+					<p class="hero__desc">
+						Take your financial life online.
+						Your Easybank account will be a one-stop-stop for spending, saving, budgeting, investing, and
+						much
+						more.
+					</p>
+					<a class="btn-link" href="#">
+						Request invite
+					</a>
+				</div>
+			</div>
+
+		</section>
+
 		<!--WHY SECTION-->
 		<section class="why">
 			<div class="container">
