fix thml validation from FEM

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</g>
 					</svg>
 				</a>
-				<button href="#" class="navbar__menu">
+				<button class="navbar__menu">
 					<img class="navbar__menu-hamburger" src="./assets/icons/icon-hamburger.svg" alt="hamburger">
 					<img class="navbar__menu-close" src="./assets/icons/icon-close.svg" alt="close">
 				</button>
@@ -208,7 +208,7 @@
 				<li><a href="">Privacy Policy</a></li>
 			</ul>
 			<ul class="last-child">
-				<li><button>Request Invite</button></li>
+				<li><button class="btn-link">Request Invite</button></li>
 				<li class="right-reserved">&copy;Eeasybank. All Right Reserved</li>
 			</ul>
 		</footer>
